--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ dataclasses-json==0.6.7
 distro==1.9.0
 exceptiongroup==1.3.0
 faiss-cpu==1.12.0
+fastapi==0.116.1
 filelock==3.19.1
 frozenlist==1.7.0
 fsspec==2025.7.0
@@ -77,6 +78,7 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.43
+starlette==0.47.3
 streamlit==1.49.0
 sympy==1.14.0
 tenacity==9.1.2
@@ -92,6 +94,7 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.35.0
 watchdog==6.0.0
 yarl==1.20.1
 zstandard==0.24.0
